[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -30,6 +30,7 @@
     "Category created successfully": "Kategorie erfolgreich erstellt",
     "Category deleted successfully": "Kategorie erfolgreich gelöscht",
     "Category updated successfully": "Kategorie erfolgreich aktualisiert",
+    "Change File": "Datei ändern",
     "Check your email to confirm your subscription.": "Überprüfen Sie Ihre E-Mail, um Ihr Abonnement zu bestätigen.",
     "Clean code, testing strategies, and development workflows": "Sauberer Code, Teststrategien und Entwicklungsabläufe",
     "Comment deleted successfully": "Kommentar erfolgreich gelöscht",
@@ -44,7 +45,6 @@
     "Create Category": "Kategorie erstellen",
     "Create Post": "Beitrag erstellen",
     "Create Tag": "Tag erstellen",
-    "Create User": "Benutzer erstellen",
     "Created": "Erstellt",
     "Database & Cache": "Datenbank & Cache",
     "Database Optimization": "Datenbankoptimierung",
@@ -57,13 +57,18 @@
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
     "Dominik Jasiński": "Dominik Jasiński",
+    "Download File": "Datei herunterladen",
     "E-mail": "E-Mail",
-    "Email": "E-Mail",
     "English": "Englisch",
     "Enter a unique key to link translations": "Geben Sie einen eindeutigen Schlüssel ein, um Übersetzungen zu verknüpfen",
     "Enter your email": "Geben Sie Ihre E-Mail ein",
     "Failed to delete comment": "Fehler beim Löschen des Kommentars",
     "Featured Articles": "Ausgewählte Artikel",
+    "Featured Image": "Ausgewähltes Bild",
+    "File Manager": "Dateimanager",
+    "File deleted successfully": "Datei erfolgreich gelöscht",
+    "File uploaded successfully": "Datei erfolgreich hochgeladen",
+    "Files": "Dateien",
     "Forgot password?": "Passwort vergessen?",
     "Fullstack Development": "Fullstack Development",
     "German": "Deutsch",
@@ -86,9 +91,9 @@
     "Log in to your account": "Anmelden zu Ihrem Konto",
     "Log out": "Abmelden",
     "Manage Categories": "Kategorien verwalten",
+    "Manage Files": "Dateien verwalten",
     "Manage Posts": "Beiträge verwalten",
     "Manage Tags": "Tags verwalten",
-    "Manage Users": "Benutzer verwalten",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Frontend-Technologien übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung. Mein Full-Stack-Ansatz ermöglicht es mir, vollständige Lösungen von der Datenbank bis zur Benutzeroberfläche zu erstellen.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Name",
@@ -135,12 +140,12 @@
     "Read the Blog": "Blog lesen",
     "Redis": "Redis",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Verantwortlich für die Entwicklung und Wartung von Webanwendungen mit Laravel und React. Implementierung von DevOps-Praktiken einschließlich Docker-Containerisierung, CI\/CD-Pipelines und automatisierter Tests. Leitung technischer Entscheidungen und Mentoring von Junior-Entwicklern. Optimierung der Anwendungsleistung und Sicherstellung der Codequalität durch Code-Reviews und Best Practices.",
-    "Role": "Rolle",
     "Save Category": "Kategorie speichern",
     "Save Post": "Beitrag speichern",
     "Save Tag": "Tag speichern",
     "Search posts": "Beiträge suchen",
     "Search posts...": "Beiträge suchen...",
+    "Select File": "Datei auswählen",
     "Select a category": "Kategorie auswählen",
     "Select a language": "Sprache auswählen",
     "Select language": "Sprache auswählen",
@@ -169,6 +174,7 @@
     "The language field is required": "Das Sprachfeld ist erforderlich",
     "The language must be one of: ": "Die Sprache muss eine der folgenden sein: ",
     "This action cannot be undone. This will permanently delete this category.": "Diese Aktion kann nicht rückgängig gemacht werden. Diese Kategorie wird dauerhaft gelöscht.",
+    "This action cannot be undone. This will permanently delete this file.": "Diese Aktion kann nicht rückgängig gemacht werden. Diese Datei wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this post.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Beitrag wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this tag.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieses Tag wird dauerhaft gelöscht.",
     "This action cannot be undone. This will permanently delete this user.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Benutzer wird dauerhaft gelöscht.",
@@ -181,11 +187,12 @@
     "Translation Key": "Übersetzungsschlüssel",
     "Unsubscribe": "Abmelden",
     "Unsubscribed from newsletter": "Abbestellung des Newsletters",
+    "Update Post": "Beitrag aktualisieren",
+    "Upload": "Hochladen",
+    "Uploading...": "Hochladen...",
     "User": "Benutzer",
-    "User Agent": "Benutzer-Agent",
     "Users": "Benutzer",
     "View all": "Alle anzeigen",
-    "Visited At": "Besucht am",
     "Visits": "Besuche",
     "Write your comment here...": "Schreiben Sie Ihren Kommentar hier...",
     "You are already subscribed to our newsletter.": "Sie sind bereits für unseren Newsletter angemeldet.",
