--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,7 @@
     "Category created successfully": "Category created successfully",
     "Category deleted successfully": "Category deleted successfully",
     "Category updated successfully": "Category updated successfully",
+    "Change File": "Change File",
     "Check your email to confirm your subscription.": "Check your email to confirm your subscription.",
     "Clean code, testing strategies, and development workflows": "Clean code, testing strategies, and development workflows",
     "Comment deleted successfully": "Comment deleted successfully",
@@ -44,7 +45,6 @@
     "Create Category": "Create Category",
     "Create Post": "Create Post",
     "Create Tag": "Create Tag",
-    "Create User": "Create User",
     "Created": "Created",
     "Database & Cache": "Database & Cache",
     "Database Optimization": "Database Optimization",
@@ -57,13 +57,18 @@
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
     "Dominik Jasiński": "Dominik Jasiński",
+    "Download File": "Download File",
     "E-mail": "E-mail",
-    "Email": "Email",
     "English": "English",
     "Enter a unique key to link translations": "Enter a unique key to link translations",
     "Enter your email": "Enter your email",
     "Failed to delete comment": "Failed to delete comment",
     "Featured Articles": "Featured Articles",
+    "Featured Image": "Featured Image",
+    "File Manager": "File Manager",
+    "File deleted successfully": "File deleted successfully",
+    "File uploaded successfully": "File uploaded successfully",
+    "Files": "Files",
     "Forgot password?": "Forgot password?",
     "Fullstack Development": "Fullstack Development",
     "German": "German",
@@ -86,9 +91,9 @@
     "Log in to your account": "Log in to your account",
     "Log out": "Log out",
     "Manage Categories": "Manage Categories",
+    "Manage Files": "Manage Files",
     "Manage Posts": "Manage Posts",
     "Manage Tags": "Manage Tags",
-    "Manage Users": "Manage Users",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Name",
@@ -135,12 +140,12 @@
     "Read the Blog": "Read the Blog",
     "Redis": "Redis",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.",
-    "Role": "Role",
     "Save Category": "Save Category",
     "Save Post": "Save Post",
     "Save Tag": "Save Tag",
     "Search posts": "Search posts",
     "Search posts...": "Search posts...",
+    "Select File": "Select File",
     "Select a category": "Select a category",
     "Select a language": "Select a language",
     "Select language": "Select language",
@@ -169,6 +174,7 @@
     "The language field is required": "The language field is required",
     "The language must be one of: ": "The language must be one of: ",
     "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
+    "This action cannot be undone. This will permanently delete this file.": "This action cannot be undone. This will permanently delete this file.",
     "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
     "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
     "This action cannot be undone. This will permanently delete this user.": "This action cannot be undone. This will permanently delete this user.",
@@ -181,11 +187,12 @@
     "Translation Key": "Translation Key",
     "Unsubscribe": "Unsubscribe",
     "Unsubscribed from newsletter": "Unsubscribed from newsletter",
+    "Update Post": "Update Post",
+    "Upload": "Upload",
+    "Uploading...": "Uploading...",
     "User": "User",
-    "User Agent": "User Agent",
     "Users": "Users",
     "View all": "View all",
-    "Visited At": "Visited At",
     "Visits": "Visits",
     "Write your comment here...": "Write your comment here...",
     "You are already subscribed to our newsletter.": "You are already subscribed to our newsletter.",
