--- a/lang/pl.json
+++ b/lang/pl.json
@@ -30,6 +30,7 @@
     "Category created successfully": "Kategoria została pomyślnie utworzona",
     "Category deleted successfully": "Kategoria została pomyślnie usunięta",
     "Category updated successfully": "Kategoria została pomyślnie zaktualizowana",
+    "Change File": "Zmień plik",
     "Check your email to confirm your subscription.": "Sprawdź swój email, aby potwierdzić subskrypcję.",
     "Clean code, testing strategies, and development workflows": "Czysty kod, strategie testowania i przepływy pracy",
     "Comment deleted successfully": "Komentarz został pomyślnie usunięty",
@@ -44,7 +45,6 @@
     "Create Category": "Stwórz kategorię",
     "Create Post": "Stwórz post",
     "Create Tag": "Stwórz tag",
-    "Create User": "Stwórz użytkownika",
     "Created": "Utworzono",
     "Database & Cache": "Baza danych i pamięć podręczna",
     "Database Optimization": "Optymalizacja bazy danych",
@@ -57,13 +57,18 @@
     "DevOps": "DevOps",
     "Docker, Linux": "Docker, Linux",
     "Dominik Jasiński": "Dominik Jasiński",
+    "Download File": "Pobierz plik",
     "E-mail": "E-mail",
-    "Email": "E-mail",
     "English": "Angielski",
     "Enter a unique key to link translations": "Wpisz unikalny klucz do linkowania tłumaczeń",
     "Enter your email": "Wpisz swój email",
     "Failed to delete comment": "Nie udało się usunąć komentarza",
     "Featured Articles": "Artykuły wyróżnione",
+    "Featured Image": "Zdjęcie wyróżnione",
+    "File Manager": "Menedżer plików",
+    "File deleted successfully": "Plik został pomyślnie usunięty",
+    "File uploaded successfully": "Plik został pomyślnie przesłany",
+    "Files": "Pliki",
     "Forgot password?": "Zapomniałeś hasła?",
     "Fullstack Development": "Fullstack Development",
     "German": "Niemiecki",
@@ -86,9 +91,9 @@
     "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
     "Manage Categories": "Zarządzaj kategoriami",
+    "Manage Files": "Zarządzaj plikami",
     "Manage Posts": "Zarządzaj postami",
     "Manage Tags": "Zarządzaj tagami",
-    "Manage Users": "Zarządzaj użytkownikami",
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie. Moja podejście full-stack pozwala mi budować kompletne rozwiązania od bazy danych do interfejsu użytkownika.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Imię",
@@ -135,12 +140,12 @@
     "Read the Blog": "Czytaj bloga",
     "Redis": "Redis",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Rozwój i utrzymanie aplikacji webowych w Laravel i React. Implementacja praktyk DevOps, w tym konteneryzacji Docker, pipeline'ów CI\/CD i testów automatycznych. Podejmowanie decyzji technicznych i mentoring młodszych programistów. Optymalizacja wydajności aplikacji i zapewnianie jakości kodu poprzez code review i najlepsze praktyki.",
-    "Role": "Rola",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
     "Save Tag": "Zapisz tag",
     "Search posts": "Szukaj postów",
     "Search posts...": "Szukaj postów...",
+    "Select File": "Wybierz plik",
     "Select a category": "Wybierz kategorię",
     "Select a language": "Wybierz język",
     "Select language": "Wybierz język",
@@ -169,6 +174,7 @@
     "The language field is required": "Pole język jest wymagane",
     "The language must be one of: ": "Język musi być jednym z:",
     "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
+    "This action cannot be undone. This will permanently delete this file.": "Tej akcji nie można cofnąć. To trwale usunie ten plik.",
     "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
     "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
     "This action cannot be undone. This will permanently delete this user.": "Tej akcji nie można cofnąć. To trwale usunie tego użytkownika.",
@@ -181,11 +187,12 @@
     "Translation Key": "Klucz tłumaczenia",
     "Unsubscribe": "Zrezygnuj z subskrypcji",
     "Unsubscribed from newsletter": "Zrezygnowałeś z newslettera",
+    "Update Post": "Aktualizuj post",
+    "Upload": "Przesyłaj",
+    "Uploading...": "Przesyłanie...",
     "User": "Użytkownik",
-    "User Agent": "Agent użytkownika",
     "Users": "Użytkownicy",
     "View all": "Pokaż wszystkie",
-    "Visited At": "Odwiedzony w",
     "Visits": "Odwiedziny",
     "Write your comment here...": "Napisz swój komentarz tutaj...",
     "You are already subscribed to our newsletter.": "Jesteś już zasubskrybowany do naszego newslettera.",
