--- a/lang/en.json
+++ b/lang/en.json
@@ -211,5 +211,9 @@
     "comment": "comment",
     "comments": "comments",
     "min read": "min read",
-    "of": "of"
+    "of": "of",
+    "Email verification": "Email verification",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Please verify your email address by clicking on the link we just emailed to you.",
+    "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
+    "Resend verification email": "Resend verification email"
 }
