--- a/lang/pl.json
+++ b/lang/pl.json
@@ -211,5 +211,9 @@
     "comment": "komentarz",
     "comments": "Komentarze",
     "min read": "min. czytania",
-    "of": "z"
+    "of": "z",
+    "Email verification": "Weryfikacja email",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Proszę zweryfikować swój adres email, klikając w link, który właśnie wysłaliśmy.",
+    "A new verification link has been sent to the email address you provided during registration.": "Nowy link weryfikacyjny został wysłany na adres email podany podczas rejestracji.",
+    "Resend verification email": "Wyślij ponownie email weryfikacyjny"
 }
