[Feat] Update translations

--- a/lang/de.json
+++ b/lang/de.json
@@ -3,6 +3,8 @@
     "2022 - Present": "2022 - aktuell",
     "A new article has been published on the blog!": "Ein neuer Artikel wurde im Blog veröffentlicht!",
     "A new article has been published:": "Ein neuer Artikel wurde im Blog veröffentlicht:",
+    "A new verification link has been sent to the email address you provided during registration.": "Ein neuer Verifizierungslink wurde an die E-Mail-Adresse gesendet, die Sie bei der Registrierung angegeben haben.",
+    "A new verification link has been sent to your email address.": "Ein neuer Verifizierungslink wurde an Ihre E-Mail-Adresse gesendet.",
     "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
     "API Design & Development": "API-Design & Entwicklung",
     "About me": "Über mich",
@@ -11,7 +13,9 @@
     "All languages": "Alle Sprachen",
     "All rights reserved.": "Alle Rechte vorbehalten.",
     "Appearance": "Aussehen",
+    "Appearance settings": "Aussehen-Einstellungen",
     "Are you sure you want to delete this comment? This action cannot be undone.": "Bist du sicher, dass du diesen Kommentar löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "Are you sure you want to delete your account?": "Bist du sicher, dass du dein Konto löschen möchtest?",
     "Are you sure?": "Bist du sicher?",
     "Back to all Categories": "Zurück zu allen Kategorien",
     "Back to all Tags": "Zurück zu allen Tags",
@@ -33,10 +37,12 @@
     "Change File": "Datei ändern",
     "Check your email to confirm your subscription.": "Überprüfen Sie Ihre E-Mail, um Ihr Abonnement zu bestätigen.",
     "Clean code, testing strategies, and development workflows": "Sauberer Code, Teststrategien und Entwicklungsabläufe",
+    "Click here to resend the verification email.": "Klicken Sie hier, um die Verifizierungs-E-Mail erneut zu senden.",
     "Comment deleted successfully": "Kommentar erfolgreich gelöscht",
     "Comment deleted successfully!": "Kommentar erfolgreich gelöscht!",
     "Comment text": "Kommentartext",
     "Comments": "Kommentare",
+    "Confirm password": "Passwort bestätigen",
     "Confirm subscription": "Abonnement bestätigen",
     "Contact": "Kontakt",
     "Contact Me": "Kontaktieren Sie mich",
@@ -46,12 +52,16 @@
     "Create Post": "Beitrag erstellen",
     "Create Tag": "Tag erstellen",
     "Created": "Erstellt",
+    "Current password": "Aktuelles Passwort",
+    "Dark": "Dunkel",
     "Database & Cache": "Datenbank & Cache",
     "Database Optimization": "Datenbankoptimierung",
     "Dear": "Sehr geehrte\/r",
     "Delete": "Löschen",
     "Delete Comment": "Kommentar löschen",
+    "Delete account": "Konto löschen",
     "Delete comment": "Kommentar löschen",
+    "Delete your account and all of its resources": "Lösche dein Konto und alle seine Ressourcen",
     "Deleting...": "Löschen...",
     "Design Patterns": "Entwurfsmuster",
     "DevOps": "DevOps",
@@ -59,7 +69,10 @@
     "Dominik Jasiński": "Dominik Jasiński",
     "Download File": "Datei herunterladen",
     "E-mail": "E-Mail",
+    "Email address": "E-Mail-Adresse",
+    "Email verification": "E-Mail-Verifizierung",
     "English": "Englisch",
+    "Ensure your account is using a long, random password to stay secure": "Stellen Sie sicher, dass Ihr Konto ein langes, zufälliges Passwort verwendet, um sicherzustellen, dass es sicher ist",
     "Enter a unique key to link translations": "Geben Sie einen eindeutigen Schlüssel ein, um Übersetzungen zu verknüpfen",
     "Enter your email": "Geben Sie Ihre E-Mail ein",
     "Failed to delete comment": "Fehler beim Löschen des Kommentars",
@@ -70,6 +83,7 @@
     "File uploaded successfully": "Datei erfolgreich hochgeladen",
     "Files": "Dateien",
     "Forgot password?": "Passwort vergessen?",
+    "Full name": "Vor- und Nachname",
     "Fullstack Development": "Fullstack Development",
     "German": "Deutsch",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Erhalten Sie Benachrichtigungen über neue Artikel und Ressourcen zur PHP-Entwicklung und DevOps-Praktiken",
@@ -88,6 +102,7 @@
     "Latest": "Neueste",
     "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Mehr über Dominik Jasiński - PHP-Entwickler & DevOps-Ingenieur mit Expertise in Laravel, Symfony, React und modernen Entwicklungspraktiken",
     "Leave a comment": "Kommentar hinterlassen",
+    "Light": "Hell",
     "Log in to your account": "Anmelden zu Ihrem Konto",
     "Log out": "Abmelden",
     "Manage Categories": "Kategorien verwalten",
@@ -97,6 +112,7 @@
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Meine technische Reise begann mit PHP, aber ich habe schnell zu modernen Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Frontend-Technologien übergegangen. Ich glaube an sauberen Code, durchdachtes Testen und stetige Verbesserung. Mein Full-Stack-Ansatz ermöglicht es mir, vollständige Lösungen von der Datenbank bis zur Benutzeroberfläche zu erstellen.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Name",
+    "New password": "Neues Passwort",
     "New post on the blog!": "Neuer Beitrag im Blog!",
     "Newsletter Confirmation Mail": "Bestätigung des Newsletter-Abonnements",
     "Newsletter Confirmed": "Newsletter-Abonnement bestätigt",
@@ -109,6 +125,7 @@
     "No users found": "Keine Benutzer gefunden",
     "No visits found": "Keine Besuche gefunden",
     "Oldest": "Älteste",
+    "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Wenn dein Konto gelöscht wird, werden alle seine Ressourcen und Daten ebenfalls dauerhaft gelöscht. Bitte gib dein Passwort ein, um zu bestätigen, dass du dein Konto dauerhaft löschen möchtest.",
     "PHP": "PHP",
     "PHP & DevOps": "PHP & DevOps",
     "PHP & DevOps Blog": "PHP & DevOps Blog",
@@ -120,6 +137,8 @@
     "Password": "Passwort",
     "Performance Optimization": "Leistungsoptimierung",
     "Pick a date": "Datum auswählen",
+    "Please proceed with caution, this cannot be undone.": "Bitte gehen Sie mit Vorsicht vor, dies kann nicht rückgängig gemacht werden.",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Bitte verifizieren Sie Ihre E-Mail-Adresse, indem Sie auf den Link klicken, den wir Ihnen gerade per E-Mail gesendet haben.",
     "Polish": "Polnisch",
     "Post": "Beitrag",
     "Post Visits": "Beitragsbesuche",
@@ -132,6 +151,8 @@
     "Previous page": "Vorherige Seite",
     "Professional Journey": "Berufliche Reise",
     "Profile": "Profil",
+    "Profile information": "Profilinformationen",
+    "Profile settings": "Profil-Einstellungen",
     "Publish at": "Veröffentlichen am",
     "Query Performance": "Abfrageleistung",
     "Read article": "Artikel lesen",
@@ -139,10 +160,14 @@
     "Read more about": "Mehr über",
     "Read the Blog": "Blog lesen",
     "Redis": "Redis",
+    "Resend verification email": "Verifizierungs-E-Mail erneut senden",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Verantwortlich für die Entwicklung und Wartung von Webanwendungen mit Laravel und React. Implementierung von DevOps-Praktiken einschließlich Docker-Containerisierung, CI\/CD-Pipelines und automatisierter Tests. Leitung technischer Entscheidungen und Mentoring von Junior-Entwicklern. Optimierung der Anwendungsleistung und Sicherstellung der Codequalität durch Code-Reviews und Best Practices.",
+    "Save": "Speichern",
     "Save Category": "Kategorie speichern",
     "Save Post": "Beitrag speichern",
     "Save Tag": "Tag speichern",
+    "Save password": "Passwort speichern",
+    "Saved": "Gespeichert",
     "Search posts": "Beiträge suchen",
     "Search posts...": "Beiträge suchen...",
     "Select File": "Datei auswählen",
@@ -157,6 +182,7 @@
     "Stay Updated": "Bleiben Sie auf dem Laufenden",
     "Submit Comment": "Kommentar senden",
     "Subscribe": "Abonnieren",
+    "System": "System",
     "Tag created successfully": "Tag erfolgreich erstellt",
     "Tag deleted successfully": "Tag erfolgreich gelöscht",
     "Tag updated successfully": "Tag erfolgreich aktualisiert",
@@ -188,12 +214,16 @@
     "Unsubscribe": "Abmelden",
     "Unsubscribed from newsletter": "Abbestellung des Newsletters",
     "Update Post": "Beitrag aktualisieren",
+    "Update password": "Passwort aktualisieren",
+    "Update your account's appearance settings": "Aktualisieren Sie die Einstellungen für Ihr Konto",
+    "Update your name and email address": "Aktualisieren Sie Ihren Namen und Ihre E-Mail-Adresse",
     "Upload": "Hochladen",
     "Uploading...": "Hochladen...",
     "User": "Benutzer",
     "Users": "Benutzer",
     "View all": "Alle anzeigen",
     "Visits": "Besuche",
+    "Warning": "Warnung",
     "Write your comment here...": "Schreiben Sie Ihren Kommentar hier...",
     "You are already subscribed to our newsletter.": "Sie sind bereits für unseren Newsletter angemeldet.",
     "You are already subscribed!": "Sie sind bereits angemeldet!",
@@ -205,15 +235,12 @@
     "You have unsubscribed from the newsletter": "Sie haben den Newsletter abbestellt",
     "You will now receive updates about new articles and content.": "Sie werden jetzt Updates über neue Artikel und Inhalte erhalten.",
     "You will receive an email every time a new article is published.": "Sie erhalten eine E-Mail, wenn ein neuer Artikel veröffentlicht wird.",
+    "Your email address is unverified.": "Ihre E-Mail-Adresse ist nicht verifiziert.",
     "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
     "auth.password": "Das eingegebene Passwort ist falsch.",
     "auth.throttle": "Zu viele Anmeldeversuche. Bitte versuchen Sie es in :seconds Sekunden erneut.",
     "comment": "Kommentar",
     "comments": "Kommentare",
     "min read": "min. Lesezeit",
-    "of": "von",
-    "Email verification": "E-Mail-Verifizierung",
-    "Please verify your email address by clicking on the link we just emailed to you.": "Bitte verifizieren Sie Ihre E-Mail-Adresse, indem Sie auf den Link klicken, den wir Ihnen gerade per E-Mail gesendet haben.",
-    "A new verification link has been sent to the email address you provided during registration.": "Ein neuer Verifizierungslink wurde an die E-Mail-Adresse gesendet, die Sie bei der Registrierung angegeben haben.",
-    "Resend verification email": "Verifizierungs-E-Mail erneut senden"
+    "of": "von"
 }
