--- a/lang/pl.json
+++ b/lang/pl.json
@@ -3,6 +3,8 @@
     "2022 - Present": "2022 - obecnie",
     "A new article has been published on the blog!": "Na blogu pojawił się nowy artykuł!",
     "A new article has been published:": "Na blogu pojawił się nowy artykuł:",
+    "A new verification link has been sent to the email address you provided during registration.": "Nowy link weryfikacyjny został wysłany na adres email podany podczas rejestracji.",
+    "A new verification link has been sent to your email address.": "Nowy link weryfikacyjny został wysłany na adres email podany podczas rejestracji.",
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
     "API Design & Development": "Projektowanie i rozwój API",
     "About me": "O mnie",
@@ -11,7 +13,9 @@
     "All languages": "Wszystkie języki",
     "All rights reserved.": "Wszelkie prawa zastrzeżone.",
     "Appearance": "Wygląd",
+    "Appearance settings": "Ustawienia wyglądu",
     "Are you sure you want to delete this comment? This action cannot be undone.": "Czy jesteś pewny, że chcesz usunąć ten komentarz? Ta akcja nie może zostać cofnięta.",
+    "Are you sure you want to delete your account?": "Czy jesteś pewny, że chcesz usunąć swoje konto?",
     "Are you sure?": "Jesteś pewien?",
     "Back to all Categories": "Wróć do wszystkich kategorii",
     "Back to all Tags": "Wróć do wszystkich tagów",
@@ -33,10 +37,12 @@
     "Change File": "Zmień plik",
     "Check your email to confirm your subscription.": "Sprawdź swój email, aby potwierdzić subskrypcję.",
     "Clean code, testing strategies, and development workflows": "Czysty kod, strategie testowania i przepływy pracy",
+    "Click here to resend the verification email.": "Kliknij tutaj, aby ponownie wysłać email weryfikacyjny.",
     "Comment deleted successfully": "Komentarz został pomyślnie usunięty",
     "Comment deleted successfully!": "Komentarz został pomyślnie usunięty!",
     "Comment text": "Treść komentarza",
     "Comments": "Komentarze",
+    "Confirm password": "Potwierdź hasło",
     "Confirm subscription": "Potwierdź subskrypcję",
     "Contact": "Kontakt",
     "Contact Me": "Skontaktuj się ze mną",
@@ -46,12 +52,16 @@
     "Create Post": "Stwórz post",
     "Create Tag": "Stwórz tag",
     "Created": "Utworzono",
+    "Current password": "Aktualne hasło",
+    "Dark": "Ciemny",
     "Database & Cache": "Baza danych i pamięć podręczna",
     "Database Optimization": "Optymalizacja bazy danych",
     "Dear": "Drogi",
     "Delete": "Usuń",
     "Delete Comment": "Usuń komentarz",
+    "Delete account": "Usuń konto",
     "Delete comment": "Usuń komentarz",
+    "Delete your account and all of its resources": "Usuń swoje konto i wszystkie jego zasoby",
     "Deleting...": "Usuwanie...",
     "Design Patterns": "Wzorce projektowe",
     "DevOps": "DevOps",
@@ -59,7 +69,10 @@
     "Dominik Jasiński": "Dominik Jasiński",
     "Download File": "Pobierz plik",
     "E-mail": "E-mail",
+    "Email address": "Adres email",
+    "Email verification": "Weryfikacja email",
     "English": "Angielski",
+    "Ensure your account is using a long, random password to stay secure": "Upewnij się, że Twoje konto używa długiego, losowego hasła, aby zostać bezpieczne",
     "Enter a unique key to link translations": "Wpisz unikalny klucz do linkowania tłumaczeń",
     "Enter your email": "Wpisz swój email",
     "Failed to delete comment": "Nie udało się usunąć komentarza",
@@ -70,6 +83,7 @@
     "File uploaded successfully": "Plik został pomyślnie przesłany",
     "Files": "Pliki",
     "Forgot password?": "Zapomniałeś hasła?",
+    "Full name": "Imię i nazwisko",
     "Fullstack Development": "Fullstack Development",
     "German": "Niemiecki",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Otrzymuj powiadomienia o nowych artykułach i zasobach dotyczących programowania w PHP i praktyk DevOps",
@@ -88,6 +102,7 @@
     "Latest": "Najnowsze",
     "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Dowiedz się więcej o Dominiku Jasińskim - programiście PHP i inżynierze DevOps z doświadczeniem w frameworkach Laravel, Symfony, React i nowoczesnych praktykach programistycznych",
     "Leave a comment": "Zostaw komentarz",
+    "Light": "Jasny",
     "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
     "Manage Categories": "Zarządzaj kategoriami",
@@ -97,6 +112,7 @@
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "Moja podróż techniczna zaczęła się od PHP, ale szybko ewoluowała do przyjęcia nowoczesnych praktyk programistycznych, konteneryzacji i CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie. Moja podejście full-stack pozwala mi budować kompletne rozwiązania od bazy danych do interfejsu użytkownika.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Imię",
+    "New password": "Nowe hasło",
     "New post on the blog!": "Nowy post na blogu!",
     "Newsletter Confirmation Mail": "Potwierdzenie subskrypcji newslettera",
     "Newsletter Confirmed": "Subskrypcja newslettera potwierdzona",
@@ -109,6 +125,7 @@
     "No users found": "Nie znaleziono użytkowników",
     "No visits found": "Nie znaleziono odwiedzin",
     "Oldest": "Najstarsze",
+    "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Po usunięciu Twojego konta, wszystkie jego zasoby i dane zostaną trwale usunięte. Proszę wprowadzić swoje hasło, aby potwierdzić, że chcesz trwale usunąć swoje konto.",
     "PHP": "PHP",
     "PHP & DevOps": "PHP i DevOps",
     "PHP & DevOps Blog": "Blog PHP i DevOps",
@@ -120,6 +137,8 @@
     "Password": "Hasło",
     "Performance Optimization": "Optymalizacja wydajności",
     "Pick a date": "Wybierz datę",
+    "Please proceed with caution, this cannot be undone.": "Proszę postępować z ostrożnością, ta operacja nie może zostać cofnięta.",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Proszę zweryfikować swój adres email, klikając w link, który właśnie wysłaliśmy.",
     "Polish": "Polski",
     "Post": "Post",
     "Post Visits": "Odwiedziny postu",
@@ -132,6 +151,8 @@
     "Previous page": "Poprzednia strona",
     "Professional Journey": "Kariera profesjonalna",
     "Profile": "Profil",
+    "Profile information": "Informacje o profilu",
+    "Profile settings": "Ustawienia profilu",
     "Publish at": "Opublikuj",
     "Query Performance": "Wydajność zapytań",
     "Read article": "Czytaj artykuł",
@@ -139,10 +160,14 @@
     "Read more about": "Czytaj więcej o",
     "Read the Blog": "Czytaj bloga",
     "Redis": "Redis",
+    "Resend verification email": "Wyślij ponownie email weryfikacyjny",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Rozwój i utrzymanie aplikacji webowych w Laravel i React. Implementacja praktyk DevOps, w tym konteneryzacji Docker, pipeline'ów CI\/CD i testów automatycznych. Podejmowanie decyzji technicznych i mentoring młodszych programistów. Optymalizacja wydajności aplikacji i zapewnianie jakości kodu poprzez code review i najlepsze praktyki.",
+    "Save": "Zapisz",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
     "Save Tag": "Zapisz tag",
+    "Save password": "Zapisz hasło",
+    "Saved": "Zapisane",
     "Search posts": "Szukaj postów",
     "Search posts...": "Szukaj postów...",
     "Select File": "Wybierz plik",
@@ -157,6 +182,7 @@
     "Stay Updated": "Bądź na bieżąco",
     "Submit Comment": "Wyślij komentarz",
     "Subscribe": "Subskrybuj",
+    "System": "System",
     "Tag created successfully": "Tag został pomyślnie utworzony",
     "Tag deleted successfully": "Tag został pomyślnie usunięty",
     "Tag updated successfully": "Tag został pomyślnie zaktualizowany",
@@ -188,12 +214,16 @@
     "Unsubscribe": "Zrezygnuj z subskrypcji",
     "Unsubscribed from newsletter": "Zrezygnowałeś z newslettera",
     "Update Post": "Aktualizuj post",
+    "Update password": "Aktualizuj hasło",
+    "Update your account's appearance settings": "Aktualizuj ustawienia wyglądu Twojego konta",
+    "Update your name and email address": "Aktualizuj swoje imię i adres email",
     "Upload": "Przesyłaj",
     "Uploading...": "Przesyłanie...",
     "User": "Użytkownik",
     "Users": "Użytkownicy",
     "View all": "Pokaż wszystkie",
     "Visits": "Odwiedziny",
+    "Warning": "Ostrzeżenie",
     "Write your comment here...": "Napisz swój komentarz tutaj...",
     "You are already subscribed to our newsletter.": "Jesteś już zasubskrybowany do naszego newslettera.",
     "You are already subscribed!": "Jesteś już zasubskrybowany!",
@@ -205,15 +235,12 @@
     "You have unsubscribed from the newsletter": "Zrezygnowałeś z newslettera",
     "You will now receive updates about new articles and content.": "Będziesz otrzymywać powiadomienia o nowych artykułach i treściach.",
     "You will receive an email every time a new article is published.": "Będziesz otrzymywać email za każdym razem, gdy zostanie opublikowany nowy artykuł.",
+    "Your email address is unverified.": "Twój adres email nie jest zweryfikowany.",
     "auth.failed": "Błędne dane logowania.",
     "auth.password": "Podane hasło jest nieprawidłowe.",
     "auth.throttle": "Za dużo prób logowania. Spróbuj ponownie za :seconds sekund.",
     "comment": "komentarz",
     "comments": "Komentarze",
     "min read": "min. czytania",
-    "of": "z",
-    "Email verification": "Weryfikacja email",
-    "Please verify your email address by clicking on the link we just emailed to you.": "Proszę zweryfikować swój adres email, klikając w link, który właśnie wysłaliśmy.",
-    "A new verification link has been sent to the email address you provided during registration.": "Nowy link weryfikacyjny został wysłany na adres email podany podczas rejestracji.",
-    "Resend verification email": "Wyślij ponownie email weryfikacyjny"
+    "of": "z"
 }
