--- a/lang/en.json
+++ b/lang/en.json
@@ -3,6 +3,8 @@
     "2022 - Present": "2022 - Present",
     "A new article has been published on the blog!": "A new article has been published on the blog!",
     "A new article has been published:": "A new article has been published:",
+    "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
+    "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
     "A reset link will be sent if the account exists.": "A reset link will be sent if the account exists.",
     "API Design & Development": "API Design & Development",
     "About me": "About me",
@@ -11,7 +13,9 @@
     "All languages": "All languages",
     "All rights reserved.": "All rights reserved.",
     "Appearance": "Appearance",
+    "Appearance settings": "Appearance settings",
     "Are you sure you want to delete this comment? This action cannot be undone.": "Are you sure you want to delete this comment? This action cannot be undone.",
+    "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
     "Are you sure?": "Are you sure?",
     "Back to all Categories": "Back to all Categories",
     "Back to all Tags": "Back to all Tags",
@@ -33,10 +37,12 @@
     "Change File": "Change File",
     "Check your email to confirm your subscription.": "Check your email to confirm your subscription.",
     "Clean code, testing strategies, and development workflows": "Clean code, testing strategies, and development workflows",
+    "Click here to resend the verification email.": "Click here to resend the verification email.",
     "Comment deleted successfully": "Comment deleted successfully",
     "Comment deleted successfully!": "Comment deleted successfully!",
     "Comment text": "Comment text",
     "Comments": "Comments",
+    "Confirm password": "Confirm password",
     "Confirm subscription": "Confirm subscription",
     "Contact": "Contact",
     "Contact Me": "Contact Me",
@@ -46,12 +52,16 @@
     "Create Post": "Create Post",
     "Create Tag": "Create Tag",
     "Created": "Created",
+    "Current password": "Current password",
+    "Dark": "Dark",
     "Database & Cache": "Database & Cache",
     "Database Optimization": "Database Optimization",
     "Dear": "Dear",
     "Delete": "Delete",
     "Delete Comment": "Delete Comment",
+    "Delete account": "Delete account",
     "Delete comment": "Delete comment",
+    "Delete your account and all of its resources": "Delete your account and all of its resources",
     "Deleting...": "Deleting...",
     "Design Patterns": "Design Patterns",
     "DevOps": "DevOps",
@@ -59,7 +69,10 @@
     "Dominik Jasiński": "Dominik Jasiński",
     "Download File": "Download File",
     "E-mail": "E-mail",
+    "Email address": "Email address",
+    "Email verification": "Email verification",
     "English": "English",
+    "Ensure your account is using a long, random password to stay secure": "Ensure your account is using a long, random password to stay secure",
     "Enter a unique key to link translations": "Enter a unique key to link translations",
     "Enter your email": "Enter your email",
     "Failed to delete comment": "Failed to delete comment",
@@ -70,6 +83,7 @@
     "File uploaded successfully": "File uploaded successfully",
     "Files": "Files",
     "Forgot password?": "Forgot password?",
+    "Full name": "Full name",
     "Fullstack Development": "Fullstack Development",
     "German": "German",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
@@ -88,6 +102,7 @@
     "Latest": "Latest",
     "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.": "Learn more about Dominik Jasiński - PHP Developer & DevOps Engineer with expertise in Laravel, Symfony, React, and modern development practices.",
     "Leave a comment": "Leave a comment",
+    "Light": "Light",
     "Log in to your account": "Log in to your account",
     "Log out": "Log out",
     "Manage Categories": "Manage Categories",
@@ -97,6 +112,7 @@
     "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines, and frontend technologies. I believe in clean code, thorough testing, and continuous improvement. My full-stack approach allows me to build complete solutions from database to user interface.",
     "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Name": "Name",
+    "New password": "New password",
     "New post on the blog!": "New post on the blog!",
     "Newsletter Confirmation Mail": "Newsletter Confirmation Mail",
     "Newsletter Confirmed": "Newsletter Confirmed",
@@ -109,6 +125,7 @@
     "No users found": "No users found",
     "No visits found": "No visits found",
     "Oldest": "Oldest",
+    "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Once your account is deleted, all of its resources and data will also be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.",
     "PHP": "PHP",
     "PHP & DevOps": "PHP & DevOps",
     "PHP & DevOps Blog": "PHP & DevOps Blog",
@@ -120,6 +137,8 @@
     "Password": "Password",
     "Performance Optimization": "Performance Optimization",
     "Pick a date": "Pick a date",
+    "Please proceed with caution, this cannot be undone.": "Please proceed with caution, this cannot be undone.",
+    "Please verify your email address by clicking on the link we just emailed to you.": "Please verify your email address by clicking on the link we just emailed to you.",
     "Polish": "Polish",
     "Post": "Post",
     "Post Visits": "Post Visits",
@@ -132,6 +151,8 @@
     "Previous page": "Previous page",
     "Professional Journey": "Professional Journey",
     "Profile": "Profile",
+    "Profile information": "Profile information",
+    "Profile settings": "Profile settings",
     "Publish at": "Publish at",
     "Query Performance": "Query Performance",
     "Read article": "Read article",
@@ -139,10 +160,14 @@
     "Read more about": "Read more about",
     "Read the Blog": "Read the Blog",
     "Redis": "Redis",
+    "Resend verification email": "Resend verification email",
     "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.": "Responsible for developing and maintaining web applications using Laravel and React. Implementing DevOps practices including Docker containerization, CI\/CD pipelines, and automated testing. Leading technical decisions and mentoring junior developers. Optimizing application performance and ensuring code quality through code reviews and best practices.",
+    "Save": "Save",
     "Save Category": "Save Category",
     "Save Post": "Save Post",
     "Save Tag": "Save Tag",
+    "Save password": "Save password",
+    "Saved": "Saved",
     "Search posts": "Search posts",
     "Search posts...": "Search posts...",
     "Select File": "Select File",
@@ -157,6 +182,7 @@
     "Stay Updated": "Stay Updated",
     "Submit Comment": "Submit Comment",
     "Subscribe": "Subscribe",
+    "System": "System",
     "Tag created successfully": "Tag created successfully",
     "Tag deleted successfully": "Tag deleted successfully",
     "Tag updated successfully": "Tag updated successfully",
@@ -188,12 +214,16 @@
     "Unsubscribe": "Unsubscribe",
     "Unsubscribed from newsletter": "Unsubscribed from newsletter",
     "Update Post": "Update Post",
+    "Update password": "Update password",
+    "Update your account's appearance settings": "Update your account's appearance settings",
+    "Update your name and email address": "Update your name and email address",
     "Upload": "Upload",
     "Uploading...": "Uploading...",
     "User": "User",
     "Users": "Users",
     "View all": "View all",
     "Visits": "Visits",
+    "Warning": "Warning",
     "Write your comment here...": "Write your comment here...",
     "You are already subscribed to our newsletter.": "You are already subscribed to our newsletter.",
     "You are already subscribed!": "You are already subscribed!",
@@ -205,15 +235,12 @@
     "You have unsubscribed from the newsletter": "You have unsubscribed from the newsletter",
     "You will now receive updates about new articles and content.": "You will now receive updates about new articles and content.",
     "You will receive an email every time a new article is published.": "You will receive an email every time a new article is published.",
+    "Your email address is unverified.": "Your email address is unverified.",
     "auth.failed": "auth.failed",
     "auth.password": "auth.password",
     "auth.throttle": "auth.throttle",
     "comment": "comment",
     "comments": "comments",
     "min read": "min read",
-    "of": "of",
-    "Email verification": "Email verification",
-    "Please verify your email address by clicking on the link we just emailed to you.": "Please verify your email address by clicking on the link we just emailed to you.",
-    "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
-    "Resend verification email": "Resend verification email"
+    "of": "of"
 }
